@@ -1,3 +1,4 @@
+2013-10-21 Fixed problem with gaps in Text module
 2013-10-16 Clear event bus when closing popup
 2013-10-16 Added CSS3 animation to navigation arrows
 2013-10-15 Fixed problem with counting errors in Custom Scoring
